--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "cookie-parser": "^1.3.3",
     "express-session": "^1.10.2",
     "lodash": "2.4.1",
     "marty": "0.8.x",
