--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "marty": "0.8.x",
     "mongoose": "^3.8.23",
     "node-uuid": "^1.4.2",
+    "oauth2orize": "^1.0.1",
     "passport": "^0.2.1",
     "passport-http": "^0.2.2",
     "passport-http-bearer": "^1.0.1",
